@@ -41,13 +41,13 @@ define( function( require ) {
     ];
 
     thisModel.solvent = Solvent.WATER;
-    thisModel.beaker = new Beaker( new Vector2( 270, 600 ), new Dimension2( 300, 325 ) );
+    thisModel.beaker = new Beaker( new Vector2( 270, 580 ), new Dimension2( 300, 305 ) );
     var yDropper = 260;
     thisModel.dropper = new Dropper( thisModel.solutes[0], new Vector2( thisModel.beaker.location.x + 60, yDropper ), new Bounds2( 300, yDropper, 410, yDropper ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.solvent, 0, thisModel.beaker.volume );
     thisModel.solventFaucet = new Faucet( new Vector2( 185, 230 ), -400,
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
-    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 70, 652 ), thisModel.beaker.right,
+    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 70, 632 ), thisModel.beaker.right,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
     thisModel.pHMeter = new PHMeter( new Vector2( 575, 80 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 605, 405 ), new Bounds2( 30, 150, 966, 680 ) );
 
