@@ -1,3 +1,4 @@
+11/25/13 Solutions: make beaker slightly shorter to accommodate control panel below beaker
 11/25/13 add beaker controls to 'Solutions' screen
 11/25/13 add graph placeholder to 'Custom' screen
 11/25/13 revert to using same color for drain cleaner and battery acid, this was intentional
